src/Domain/Compiler/Tests/Expression/IntegerLiteral/HexadecimalLiteral/__Baselines__/HexadecimalLiteral_SInt64Overflow-StashIr.error
error: Negative value cannot exceed S64_Max
--> main.hs:8:9
  | 
8 | return -0xffff_ffff_ffff_ffff;    
  |         ^^^^^^^^^^^^^^^^^^^^^
